# updateio_app

./: .cursorrules  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: main.tsx  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  rust-project.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/games/: epic.rs  manager.rs  mod.rs  steam.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/registry/: epic.rs  mod.rs  steam.rs
src-tauri/src/settings/: db.rs  manager.rs  mod.rs
src-tauri/src/steam/: cache.rs  mod.rs  parser.rs
src/hooks/: useGames.ts  useSettings.ts
src/lib/: api.ts
src/routes/: __root.tsx  games.lazy.tsx  index.lazy.tsx  settings.lazy.tsx
src/types/: games.ts  settings.ts
